welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = 
{
	if (90 < n < 100)
	{
		return true
	} else {
		return false
	}
}